# augment

./: .gitignore  CMakeLists.txt  README.md  augment.cpp  booz.cpp  colors.h  drawing.cpp  image.cpp  image.h  utils.cpp
docs/: examples.md  notes.md  requirements.md  tests.md
